renamed .rhtml to .html.erb as per latest convention, added applicationhtml/ern template

--- a/app/views/characters/_form.erb
+++ b/app/views/characters/_form.erb
@@ -25,7 +25,7 @@
                     </td>
                     <td width="10%" class="CharSheetFieldName">Player</td>
                     <td width="40%" colspan="2" class="CharSheetFieldValueLeft">
-                      <%= h(current_user.name) %>
+                      <%= h(current_user.login) %>
                     </td>
                   </tr>
                   <tr>
