make character show/edit work again (sorta)

--- a/app/views/characters/_form.erb
+++ b/app/views/characters/_form.erb
@@ -1,5 +1,3 @@
-<%= error_messages_for 'character' %>
-
 <!--[form:character]-->
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
   <!--DWLayoutTable-->
@@ -78,21 +76,21 @@
                     <td colspan="10" class="CharSheetFieldName"><hr /></td>
                   </tr>
                   <%
-                  if @character.character_char_classes.size > 0
-                    for char_char_class in @character.character_char_classes
-                  -%>
+                  if !@character.char_classes.empty?
+                    for char_class in @character.char_classes
+                  %>
                       <tr>
                         <td colspan="2" class="CharSheetFieldName"><b>Character Class</b></td>
                         <td colspan="4" class="CharSheetFieldValueLeft">
-                          <%= h(char_char_class.char_class.name) %>
+                          <%= h(char_class.name) %>
                         </td>
                         <td class="CharSheetFieldName"><b>Hit Die</b></td>
                         <td class="CharSheetFieldValue">
-                          <%= h(char_char_class.char_class.hit_die) %>
+                          <%= h(char_class.hit_die) %>
                         </td>
                         <td class="CharSheetFieldName"><b>Level</b></td>
                         <td class="CharSheetFieldValue">
-                          <%= h(char_char_class.level) %>
+                          <%= h(char_class.level) %>
                         </td>
                       </tr>
                   <%
