--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -1,8 +1,9 @@
 <h1>New character</h1>
 
-<% form_for :character, :url => { :action => :new } do |form| %>
+<% form_for(@character) do |f| %>
+  <%= f.error_messages %>
   <%= render :partial => 'form' %>
-  <%= submit_tag 'Save' %>
+  <%= f.submit 'Create' %>
 <% end %>
 
-<%= link_to 'Back to list', :action => 'list' %>
+<%= link_to 'Back', characters_path %>
