--- a/public/stylesheets/styles.sass
+++ b/public/stylesheets/styles.sass
@@ -23,6 +23,7 @@ a
     color: #fff
     background-color: #000
 
-@import grid.sass
+@import 1kbgrid.sass
++1kbgrid(12, 60px, 10px)
 
 @import errors.sass
