--- a/app/views/characters/show.html.haml
+++ b/app/views/characters/show.html.haml
@@ -1,8 +1,6 @@
-= render :partial => "character", :object => @character
+%h1= h(@character.name)
 
-#actions
-  = link_to 'Edit', edit_character_path(@character)
-  |
-  = link_to 'Destroy', @character, :confirm => 'Are you sure?', :method => :delete
-  |
-  = link_to 'Back', characters_path
+%ul#actions
+  %li{:class => "first"}= link_to 'Edit', edit_character_path(@character)
+  %li= link_to 'Destroy', @character, :confirm => 'Are you sure?', :method => :delete
+  %li{:class => "last"}= link_to 'Back', characters_path
