--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 !!!
 %html
   %head
-    %title= @browser_title || 'Default Browser Title'
+    %title= @browser_title || 'AEther: Arcana Evolved Character Editor'
 
     = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
     = stylesheet_link_tag 'compiled/print.css', :media => 'print'
@@ -16,7 +16,13 @@
         %h1
           AEther: Arcana Evolved Character Editor
         %ul#header_links
-          %li= link_to "Source code", "http://github.com/ashebanow/aether"
+          - if !current_user
+            %li{:class => "first"}= link_to "Register", new_account_path
+            %li= link_to "Log In", new_user_session_path
+            %li{:class => "last"}= link_to "Forgot password", new_password_reset_path
+          - else
+            %li{:class => "first"}= link_to "My Account", account_path
+            %li{:class => "last"}= link_to "Logout", user_session_path, :method => :delete, :confirm => "Are you sure?"
 
       #content
         = yield
@@ -26,11 +32,6 @@
           This is a sidebar
 
       #footer
-        %ul#footer_links
-          - if !current_user
-            %li{:class => "first"}= link_to "Register", new_account_path
-            %li= link_to "Log In", new_user_session_path
-            %li{:class => "last"}= link_to "Forgot password", new_password_reset_path
-          - else
-            %li{:class => "first"}= link_to "My Account", account_path
-            %li{:class => "last"}= link_to "Logout", user_session_path, :method => :delete, :confirm => "Are you sure?"
+        %p
+          Written by Andrew Shebanow. BSD licensed,
+          %a{:href => "http://github.com/ashebanow/aether"} have at it!
