start displaying more char info in show action

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -37,6 +37,12 @@ body.three-col
       
     #content
       +column(20)
+
+      #character_attributes
+        font-size: 9pt
+        
+      #character_class_summary
+        font-style: italic
       
       #actions
         +horizontal-list
@@ -53,7 +59,7 @@ body.three-col
           +hover-link
 
     #footer
-      +column(!blueprint_grid_columns)
+      +column(24)
       margin-top: 20px
 
       #footer_links
