--- a/app/views/characters/index.html.haml
+++ b/app/views/characters/index.html.haml
@@ -4,7 +4,8 @@
   - for character in @characters
     %li.character
       .content
-        = render :partial => "character", :object => character
+        %h2= link_to h(character.name), character
+        %p#character_class_summary= char_class_summary character
 
 .tools
   = link_to 'New character', new_character_path
