converted Level into a list of levels so that we have a history of when levels were taken

--- a/app/views/characters/show.html.haml
+++ b/app/views/characters/show.html.haml
@@ -32,7 +32,7 @@
 #health_summary
   %h2 Hit Points
   %ul
-    %li Max: 119
+    %li= "Max: " + total_hit_points(@character).to_s
     %li Damage: -15
     %li Subdual: -22
     %li Current: 92
